<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_size_big"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/edit_profile_common"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/outer_margin_medium"
        android:textColor="@color/edit_profile_header"
        android:autoText="false"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFDDDDDD">
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_size_big"
        android:paddingLeft="@dimen/outer_margin_big"
        android:paddingRight="@dimen/outer_margin_big"
        android:nestedScrollingEnabled="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/edit_profile_avatar_user"
            android:id="@+id/textView11"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:id="@+id/imageView10"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFDDDDDD"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_size_big"
        android:paddingLeft="@dimen/outer_margin_big"
        android:paddingRight="@dimen/outer_margin_big"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/edit_profile_avatar_background"
            android:id="@+id/textView17"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="@dimen/icon_size"
            android:id="@+id/imageView15"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFDDDDDD"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_size_big"
        android:paddingLeft="@dimen/outer_margin_big"
        android:paddingRight="@dimen/outer_margin_big"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/edit_profile_name"
            android:id="@+id/textView18"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="8"
            android:id="@+id/editText"
            android:textSize="14dp"
            android:text="Вазген Гургенович"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFDDDDDD"/>
</LinearLayout>