<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/registration_background"
              android:padding="@dimen/outer_margin_big">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:background="@drawable/news_tee_title_vector"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
        </FrameLayout>

        <ImageButton
            android:layout_width="@dimen/icon_size_big"
            android:layout_height="@dimen/icon_size_big"
            android:id="@+id/facebook_imageButton"
            android:background="@drawable/ic_facebook"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </FrameLayout>

        <ImageButton
            android:layout_width="@dimen/icon_size_big"
            android:layout_height="@dimen/icon_size_big"
            android:id="@+id/google_imageButton"
            android:background="@drawable/ic_google"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </FrameLayout>

        <ImageButton
            android:layout_width="@dimen/icon_size_big"
            android:layout_height="@dimen/icon_size_big"
            android:id="@+id/vk_imageButton"
            android:background="@drawable/ic_vk"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </FrameLayout>

        <ImageButton
            android:layout_width="@dimen/icon_size_big"
            android:layout_height="@dimen/icon_size_big"
            android:id="@+id/twitter_imageButton"
            android:background="@drawable/ic_twitter"
            />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
    </FrameLayout>

    <Button
        android:alpha="50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_via_email"
        android:id="@+id/button2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@drawable/button_registraton_shape"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_have_registration"
            android:textColor="@android:color/white"


            android:id="@+id/textView9"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAllCaps="true"
            android:id="@+id/button4"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@drawable/button_registraton_shape"
        android:textColor="@android:color/white"
        android:text="@string/resume_without_registr"
        android:textAllCaps="true"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:id="@+id/textView8"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/outer_margin_big"/>

</LinearLayout>